main adding search component

--- a/src/app/src/location/pages/location-list/location-list.component.html
+++ b/src/app/src/location/pages/location-list/location-list.component.html
@@ -1,3 +1,4 @@
+<app-search title="Locations Page" [list]="locationsList" (searchEvent)="receiveSearchList($event)"></app-search>
 <ul class="list-group">
-    <li class="list-group-item" *ngFor="let item of locationsList; let i = index" [attr.data-index]="i" (click)="redirect(item.id)">{{ item.name }}</li>
+    <li class="list-group-item" *ngFor="let item of currentList; let i = index" [attr.data-index]="i" (click)="redirect(item.id)">{{ item.name }}</li>
 </ul>
