--- a/src/app/src/character/pages/character-list/character-list.component.html
+++ b/src/app/src/character/pages/character-list/character-list.component.html
@@ -1,3 +1,4 @@
+<app-search title="Characters Page" [list]="charactersList" (searchEvent)="receiveSearchList($event)"></app-search>
 <ul class="list-group">
-    <li class="list-group-item" *ngFor="let item of charactersList; let i = index" [attr.data-index]="i" (click)="redirect(item.id)">{{ item.name }}</li>
-  </ul>
+    <li class="list-group-item" *ngFor="let item of currentList; let i = index" [attr.data-index]="i" (click)="redirect(item.id)">{{ item.name }}</li>
+</ul>
