--- a/src/app/src/episode/pages/episode-list/episode-list.component.html
+++ b/src/app/src/episode/pages/episode-list/episode-list.component.html
@@ -1,3 +1,4 @@
+<app-search title="Episodes Page" [list]="episodesList" (searchEvent)="receiveSearchList($event)"></app-search>
 <ul class="list-group">
-    <li class="list-group-item" *ngFor="let item of episodesList; let i = index" [attr.data-index]="i" (click)="redirect(item.id)">{{ item.name }}</li>
+    <li class="list-group-item" *ngFor="let item of currentList; let i = index" [attr.data-index]="i" (click)="redirect(item.id)">{{ item.name }}</li>
 </ul>
